side_layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@ button p {
   margin: 0;
   position: relative;
   font-size: 20px;
-  color: var(--white)
+  color: var(--white);
 }
 
 button::after {
@@ -167,7 +167,7 @@ button::after {
 
 button p::before {
   position: absolute;
-/*   box-sizing: border-box; */
+  /*   box-sizing: border-box; */
   content: "";
   width: 0%;
   inset: 0;
@@ -186,7 +186,7 @@ button:hover p::before {
 
 button:hover svg {
   transform: translateX(4px);
-  color: var(--secondary)
+  color: var(--secondary);
 }
 
 button svg {
@@ -260,6 +260,11 @@ button svg {
 @media (max-width: 1200px) {
   .side_layout {
     width: 25%;
+  }
+}
+@media (max-width: 768px) {
+  .side_layout {
+    display: none;
   }
 }
 
